--- a/plugins/google-play-services/saved-games/overview.html
+++ b/plugins/google-play-services/saved-games/overview.html
@@ -87,7 +87,7 @@
     
     <div class="container-fluid">
         <div class="row" style="margin-left: 7px">
-            <button class="mobile-button">></button>
+            <button class="mobile-button"></button>
             <!-- Side Navigation Bar -->
             <nav id="sidebar" class="col-md-2 d-none d-md-block sidebar sidebar-custom">
                 <div class="sidebar-sticky">
