--- a/contact.html
+++ b/contact.html
@@ -92,7 +92,19 @@
                 </div>
               </a>
             </li>
-            <!-- <li>
+            <li>
+              <a class="dropdown-item" href="plugins/google-play-services/in-app-reviews/overview.html">
+                  <div class="dropdown-item-content">
+                      <img src="./images/InAppReviews/GooglePlay_Reviews_Plugin_Logo.png" alt="Google Play Reviews"
+                          class="dropdown-item-image">
+                      <div class="dropdown-item-text">
+                          Play: Reviews
+                          <span class="dropdown-item-subtext">Android Plugin</span>
+                      </div>
+                  </div>
+              </a>
+            </li>
+            <li>
               <a class="dropdown-item" href="plugins/android-native/sensors/overview.html">
                   <div class="dropdown-item-content">
                       <img src="./images/AndroidSensors/Android_Sensors_Plugin_Logo.png" alt="Android Sensors"
@@ -103,7 +115,7 @@
                       </div>
                   </div>
               </a>
-            </li> -->
+            </li>
           </ul>
         </li>
         <li class="nav-item">
