--- a/plugins/google-play-services/in-app-reviews/overview.html
+++ b/plugins/google-play-services/in-app-reviews/overview.html
@@ -194,7 +194,7 @@
                             <b>The Google Play Service: In App Reviews</b>
                         </p>
                         <p class="content">
-                            he Google Play In-App Review service enables you to seamlessly request users to provide ratings and reviews on the Play Store, all within your app or game, eliminating the need for them to exit the app.
+                            The Google Play In-App Review service enables you to seamlessly request users to provide ratings and reviews on the Play Store, all within your app or game, eliminating the need for them to exit the app.
                         </p>
                         <p class="content" style="margin-bottom: 0rem;">
                             By utilizing this service and adhering to Google's guidelines for <a href="https://developer.android.com/guide/playcore/in-app-review#when-to-request" target="_blank">timing review requests</a> to stay within the specified <a href="https://developer.android.com/guide/playcore/in-app-review#quotas" target="_blank">quotas</a>,
